--- a/ietf/static/css/ietf.scss
+++ b/ietf/static/css/ietf.scss
@@ -169,7 +169,8 @@ table tbody.meta {
 }
 
 // Try and hyphenate table headings and other things
-th, .hyphenate {
+th,
+.hyphenate {
     hyphens: auto;
 }
 
@@ -209,8 +210,14 @@ th, .hyphenate {
 }
 
 // Make revision numbers pagination items fixed-width
-.revision-list .page-item {
-    width: 2.2rem;
+.revision-list {
+    .page-item {
+        width: 2.2rem;
+    }
+
+    .page-item.rfc {
+        width: 6.6rem;
+    }
 }
 
 // Style the photo cards
